@@ -11,7 +11,9 @@
 For more details, please see the README file.
 
 January,  , 2024, AnnotSV version 3.4
-	- Add new regulatory elements annotation (ABC model annotations)
+	- Add new regulatory elements annotations:
+		- Activity-by-Contact (ABC) model annotations
+		- Massively Parallel Reporter assays (MPRA) annotations
 	- Add benign SV annotation from "gnomad v4" (GRCh38) (issue 201)
 	- Fix misleading OMIM annotation (issues 156, 132)
 	- Add "NCBI_gene_ID" annotation
